# cpptxrx

./: .clang-format  CMakeLists.txt  LICENSE  README.md
examples/: 01_using_a_threadsafe_interface.cpp  02_using_a_raw_interface.cpp  03_receive_callbacks.cpp  04_chaining_filters.cpp  05_using_runtime_polymorphism.cpp  06_using_comptime_polymorphism.cpp  07_wrapping_a_udp_socket.cpp  08_using_a_tcp_interface.cpp  creating_a_udp_wrapper.cpp  using_a_raw_interface.cpp  using_a_threadsafe_interface.cpp  using_polymorphism.cpp
examples/utils/: printing.h  test_utils.h
include/: cpptxrx.h  cpptxrx_abstract.h  cpptxrx_factory.h  cpptxrx_filter.h  cpptxrx_filter_processor.h  cpptxrx_filters.h  cpptxrx_macros.h  cpptxrx_op_backend.h  cpptxrx_op_types.h  cpptxrx_overflow.h  cpptxrx_raii_thread.h  cpptxrx_raw.h  cpptxrx_short_form.h  cpptxrx_status.h  cpptxrx_threadsafe.h  default_tcp.h  default_udp.h  default_udp_raw.h
test/: Makefile  test_all.cpp  test_all_examples_run.cpp  test_filters.cpp  test_overflows.cpp  test_using_udp.cpp
